--- a/EmployeeSQL/Pewlett-Hackard Extra Analysis.ipynb
+++ b/EmployeeSQL/Pewlett-Hackard Extra Analysis.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from config import username, password, host, port\n",
+    "from config import username, password, host, port # need config.py file containing this info\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
